--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
+    <script src="https://kit.fontawesome.com/5fa1c72ce9.js" crossorigin="anonymous"></script>
     <!-- cssファイルの読み込み -->
     <link rel="stylesheet" href="style.css"/>
     <title>CARAVAN</title>
@@ -15,6 +16,12 @@
         CARAVAN
        </a>
       </h1>
+
+      <div class="social">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
     </header>
 
     <!-- navigation -->
